-- ====================================================================
-- DỰ ÁN: TalentBridge - Nền tảng tuyển dụng trực tuyến (Online ATS)
-- HỌC PHẦN: Java Spring 2
-- MỤC TIÊU: Thiết kế CSDL chuẩn hóa 3NF tích hợp Hồ sơ TopCV & Bộ sinh CV (CV Builder)
-- HỆ QUẢN TRỊ CSDL: MySQL 8.0+ / MariaDB / H2 (MODE=MySQL)
-- FLYWAY MIGRATION: V1__baseline.sql
-- ====================================================================

-- ====================================================================
-- PHÂN HỆ 1: XÁC THỰC & PHÂN QUYỀN (AUTHENTICATION & RBAC)
-- ====================================================================

-- 1. Bảng users: Tài khoản đăng nhập hệ thống
CREATE TABLE `users` (
    `id` BIGINT AUTO_INCREMENT PRIMARY KEY,
    `email` VARCHAR(150) NOT NULL UNIQUE,
    `password_hash` VARCHAR(255) NOT NULL,
    `full_name` VARCHAR(100) NOT NULL,
    `phone` VARCHAR(20) NULL,
    `phone_number` VARCHAR(20) NULL,
    `avatar_url` VARCHAR(500) NULL,
    `status` VARCHAR(20) NOT NULL DEFAULT 'ACTIVE', -- ACTIVE, INACTIVE, BANNED, LOCKED
    `created_at` TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    `updated_at` TIMESTAMP DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP,
    INDEX `idx_users_email` (`email`),
    INDEX `idx_users_status` (`status`)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;

-- 2. Bảng roles & user_roles: Phân quyền RBAC
CREATE TABLE `roles` (
    `id` BIGINT AUTO_INCREMENT PRIMARY KEY,
    `name` VARCHAR(50) NOT NULL UNIQUE, -- ROLE_CANDIDATE, ROLE_RECRUITER, ROLE_ADMIN
    `description` VARCHAR(255) NULL
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;

CREATE TABLE `user_roles` (
    `user_id` BIGINT NOT NULL,
    `role_id` BIGINT NOT NULL,
    PRIMARY KEY (`user_id`, `role_id`),
    CONSTRAINT `fk_user_roles_user` FOREIGN KEY (`user_id`) REFERENCES `users` (`id`) ON DELETE CASCADE,
    CONSTRAINT `fk_user_roles_role` FOREIGN KEY (`role_id`) REFERENCES `roles` (`id`) ON DELETE CASCADE
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;

-- 2.1. Bảng auth_sessions: Quản lý vòng đời phiên đăng nhập
CREATE TABLE `auth_sessions` (
    `id` BIGINT AUTO_INCREMENT PRIMARY KEY,
    `session_id` VARCHAR(36) NOT NULL,
    `user_id` BIGINT NOT NULL,
    `refresh_token_hash` VARCHAR(255) NOT NULL,
    `expires_at` DATETIME(6) NOT NULL,
    `revoked_at` DATETIME(6) NULL,
    `created_at` DATETIME(6) NOT NULL DEFAULT CURRENT_TIMESTAMP(6),
    `updated_at` DATETIME(6) NOT NULL DEFAULT CURRENT_TIMESTAMP(6) ON UPDATE CURRENT_TIMESTAMP(6),
    CONSTRAINT `uk_auth_sessions_session_id` UNIQUE (`session_id`),
    CONSTRAINT `fk_auth_sessions_user` FOREIGN KEY (`user_id`) REFERENCES `users` (`id`) ON DELETE CASCADE,
    INDEX `idx_auth_sessions_user_id` (`user_id`),
    INDEX `idx_auth_sessions_expires_at` (`expires_at`)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;

-- 2.2. Bảng password_reset_tokens: Quản lý token đặt lại mật khẩu
CREATE TABLE `password_reset_tokens` (
    `id` BIGINT AUTO_INCREMENT PRIMARY KEY,
    `user_id` BIGINT NOT NULL,
    `token_hash` VARCHAR(64) NOT NULL,
    `expires_at` DATETIME(6) NOT NULL,
    `used_at` DATETIME(6) NULL,
    `created_at` DATETIME(6) NOT NULL DEFAULT CURRENT_TIMESTAMP(6),
    `updated_at` DATETIME(6) NOT NULL DEFAULT CURRENT_TIMESTAMP(6) ON UPDATE CURRENT_TIMESTAMP(6),
    CONSTRAINT `uk_password_reset_tokens_token_hash` UNIQUE (`token_hash`),
    CONSTRAINT `fk_password_reset_tokens_user` FOREIGN KEY (`user_id`) REFERENCES `users` (`id`) ON DELETE CASCADE,
    INDEX `idx_password_reset_tokens_user_id` (`user_id`),
    INDEX `idx_password_reset_tokens_expires_at` (`expires_at`)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;

-- ====================================================================
-- PHÂN HỆ 2: HỒ SƠ ỨNG VIÊN CHI TIẾT & TOPCV PROFILE
-- ====================================================================

-- 3. Bảng candidates: Hồ sơ ứng viên chi tiết (Mở rộng cho CV Builder)
CREATE TABLE `candidates` (
    `id` BIGINT AUTO_INCREMENT PRIMARY KEY,
    `user_id` BIGINT NOT NULL UNIQUE,
    `title` VARCHAR(150) NULL,
    `dob` DATE NULL,
    `gender` VARCHAR(10) NULL DEFAULT 'OTHER',
    `summary` TEXT NULL,
    `experience_years` INT DEFAULT 0,
    `current_salary` DECIMAL(12,2) NULL,
    `expected_salary` DECIMAL(12,2) NULL,
    `city` VARCHAR(100) NULL,
    `address` VARCHAR(255) NULL,
    `personal_website` VARCHAR(255) NULL,
    `linkedin_url` VARCHAR(255) NULL,
    `github_url` VARCHAR(255) NULL,
    `created_at` TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    `updated_at` TIMESTAMP DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP,
    CONSTRAINT `fk_candidates_user` FOREIGN KEY (`user_id`) REFERENCES `users` (`id`) ON DELETE CASCADE,
    INDEX `idx_candidates_city` (`city`)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;

-- 4. Bảng skills: Danh mục kỹ năng chuyên môn dùng chung
CREATE TABLE `skills` (
    `id` INT AUTO_INCREMENT PRIMARY KEY,
    `name` VARCHAR(100) NOT NULL UNIQUE
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;

-- 5. Bảng work_experiences: Lịch sử làm việc (TopCV Work History)
CREATE TABLE `work_experiences` (
    `id` BIGINT AUTO_INCREMENT PRIMARY KEY,
    `candidate_id` BIGINT NOT NULL,
    `company_name` VARCHAR(200) NOT NULL,
    `position` VARCHAR(150) NOT NULL,
    `start_date` DATE NOT NULL,
    `end_date` DATE NULL,
    `is_current` BOOLEAN DEFAULT FALSE,
    `description` TEXT NULL,
    `achievements` TEXT NULL,
    `created_at` TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    `updated_at` TIMESTAMP DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP,
    CONSTRAINT `fk_work_exp_candidate` FOREIGN KEY (`candidate_id`) REFERENCES `candidates` (`id`) ON DELETE CASCADE,
    INDEX `idx_work_exp_candidate` (`candidate_id`)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;

-- 6. Bảng educations: Lịch sử học vấn & bằng cấp (TopCV Education)
CREATE TABLE `educations` (
    `id` BIGINT AUTO_INCREMENT PRIMARY KEY,
    `candidate_id` BIGINT NOT NULL,
    `institution_name` VARCHAR(200) NOT NULL,
    `degree` VARCHAR(100) NOT NULL,
    `field_of_study` VARCHAR(150) NOT NULL,
    `start_date` DATE NOT NULL,
    `end_date` DATE NULL,
    `is_current` BOOLEAN DEFAULT FALSE,
    `gpa` VARCHAR(20) NULL,
    `description` TEXT NULL,
    `created_at` TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    `updated_at` TIMESTAMP DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP,
    CONSTRAINT `fk_educations_candidate` FOREIGN KEY (`candidate_id`) REFERENCES `candidates` (`id`) ON DELETE CASCADE,
    INDEX `idx_educations_candidate` (`candidate_id`)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;

-- 7. Bảng candidate_skills: Kỹ năng của ứng viên (TopCV Skills Rating)
CREATE TABLE `candidate_skills` (
    `id` BIGINT AUTO_INCREMENT PRIMARY KEY,
    `candidate_id` BIGINT NOT NULL,
    `skill_id` INT NOT NULL,
    `proficiency_level` VARCHAR(30) DEFAULT 'INTERMEDIATE',
    `rating` INT DEFAULT 3,
    `years_of_experience` DOUBLE DEFAULT 1.0,
    CONSTRAINT `fk_cand_skills_candidate` FOREIGN KEY (`candidate_id`) REFERENCES `candidates` (`id`) ON DELETE CASCADE,
    CONSTRAINT `fk_cand_skills_skill` FOREIGN KEY (`skill_id`) REFERENCES `skills` (`id`) ON DELETE CASCADE,
    UNIQUE KEY `uk_cand_skill` (`candidate_id`, `skill_id`),
    INDEX `idx_cand_skills_candidate` (`candidate_id`),
    INDEX `idx_cand_skills_skill` (`skill_id`)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;

-- 8. Bảng candidate_projects: Dự án cá nhân & thực tế (TopCV Projects)
CREATE TABLE `candidate_projects` (
    `id` BIGINT AUTO_INCREMENT PRIMARY KEY,
    `candidate_id` BIGINT NOT NULL,
    `project_name` VARCHAR(200) NOT NULL,
    `role` VARCHAR(100) NOT NULL,
    `team_size` INT NULL,
    `start_date` DATE NOT NULL,
    `end_date` DATE NULL,
    `is_current` BOOLEAN DEFAULT FALSE,
    `technologies` VARCHAR(500) NULL,
    `project_url` VARCHAR(500) NULL,
    `github_url` VARCHAR(500) NULL,
    `description` TEXT NULL,
    `responsibilities` TEXT NULL,
    `created_at` TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    `updated_at` TIMESTAMP DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP,
    CONSTRAINT `fk_projects_candidate` FOREIGN KEY (`candidate_id`) REFERENCES `candidates` (`id`) ON DELETE CASCADE,
    INDEX `idx_projects_candidate` (`candidate_id`)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;

-- 9. Bảng candidate_certificates: Chứng chỉ chuyên môn (TopCV Certificates)
CREATE TABLE `candidate_certificates` (
    `id` BIGINT AUTO_INCREMENT PRIMARY KEY,
    `candidate_id` BIGINT NOT NULL,
    `certificate_name` VARCHAR(200) NOT NULL,
    `issuing_organization` VARCHAR(200) NOT NULL,
    `issue_date` DATE NOT NULL,
    `expiration_date` DATE NULL,
    `credential_id` VARCHAR(100) NULL,
    `credential_url` VARCHAR(500) NULL,
    `created_at` TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT `fk_certificates_candidate` FOREIGN KEY (`candidate_id`) REFERENCES `candidates` (`id`) ON DELETE CASCADE,
    INDEX `idx_certificates_candidate` (`candidate_id`)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;

-- 10. Bảng candidate_awards: Giải thưởng & Thành tựu (TopCV Awards)
CREATE TABLE `candidate_awards` (
    `id` BIGINT AUTO_INCREMENT PRIMARY KEY,
    `candidate_id` BIGINT NOT NULL,
    `title` VARCHAR(200) NOT NULL,
    `organization` VARCHAR(200) NOT NULL,
    `issue_date` DATE NOT NULL,
    `description` TEXT NULL,
    `created_at` TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT `fk_awards_candidate` FOREIGN KEY (`candidate_id`) REFERENCES `candidates` (`id`) ON DELETE CASCADE,
    INDEX `idx_awards_candidate` (`candidate_id`)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;

-- ====================================================================
-- PHÂN HỆ 3: MẪU CV & BỘ SINH CV TỰ ĐỘNG (CV BUILDER & GENERATOR)
-- ====================================================================

-- 11. Bảng cv_templates: Kho mẫu CV cho tính năng Generate Resume từ Profile
CREATE TABLE `cv_templates` (
    `id` INT AUTO_INCREMENT PRIMARY KEY,
    `name` VARCHAR(100) NOT NULL,
    `template_code` VARCHAR(50) NOT NULL UNIQUE,
    `thumbnail_url` VARCHAR(500) NULL,
    `description` VARCHAR(255) NULL,
    `default_config` JSON NULL,
    `is_active` BOOLEAN DEFAULT TRUE,
    `created_at` TIMESTAMP DEFAULT CURRENT_TIMESTAMP
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;

-- 12. Bảng resumes: Quản lý CV tải lên & CV tự động tạo từ Profile
CREATE TABLE `resumes` (
    `id` BIGINT AUTO_INCREMENT PRIMARY KEY,
    `candidate_id` BIGINT NOT NULL,
    `template_id` INT NULL,
    `resume_type` VARCHAR(20) NOT NULL DEFAULT 'UPLOADED',
    `title` VARCHAR(200) NOT NULL DEFAULT 'My Resume',
    `file_name` VARCHAR(255) NOT NULL,
    `file_url` VARCHAR(500) NOT NULL,
    `file_type` VARCHAR(150) DEFAULT 'application/pdf',
    `is_default` BOOLEAN DEFAULT FALSE,
    `customization_json` JSON NULL,
    `parsed_text` LONGTEXT NULL,
    `created_at` TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    `updated_at` TIMESTAMP DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP,
    CONSTRAINT `fk_resumes_candidate` FOREIGN KEY (`candidate_id`) REFERENCES `candidates` (`id`) ON DELETE CASCADE,
    CONSTRAINT `fk_resumes_template` FOREIGN KEY (`template_id`) REFERENCES `cv_templates` (`id`) ON DELETE SET NULL,
    INDEX `idx_resumes_candidate` (`candidate_id`),
    INDEX `idx_resumes_type` (`resume_type`)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;

-- ====================================================================
-- PHÂN HỆ 4: DOANH NGHIỆP & NHÀ TUYỂN DỤNG (COMPANIES & RECRUITERS)
-- ====================================================================

-- 13. Bảng companies: Hồ sơ doanh nghiệp
CREATE TABLE `companies` (
    `id` BIGINT AUTO_INCREMENT PRIMARY KEY,
    `name` VARCHAR(200) NOT NULL,
    `logo_url` VARCHAR(500) NULL,
    `banner_url` VARCHAR(500) NULL,
    `website` VARCHAR(255) NULL,
    `industry` VARCHAR(150) NULL,
    `company_size` VARCHAR(50) NULL,
    `address` VARCHAR(300) NOT NULL,
    `city` VARCHAR(100) NOT NULL,
    `tax_code` VARCHAR(50) NULL,
    `description` TEXT NULL,
    `status` VARCHAR(20) DEFAULT 'PENDING',
    `created_by_user_id` BIGINT NULL,
    `created_at` TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    `updated_at` TIMESTAMP DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP,
    INDEX `idx_companies_name` (`name`),
    INDEX `idx_companies_city` (`city`),
    INDEX `idx_companies_status` (`status`)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;

-- 14. Bảng recruiters: Nhà tuyển dụng thuộc công ty
CREATE TABLE `recruiters` (
    `id` BIGINT AUTO_INCREMENT PRIMARY KEY,
    `user_id` BIGINT NOT NULL UNIQUE,
    `company_id` BIGINT NULL,
    `position` VARCHAR(100) NULL,
    `created_at` TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    `updated_at` TIMESTAMP DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP,
    CONSTRAINT `fk_recruiters_user` FOREIGN KEY (`user_id`) REFERENCES `users` (`id`) ON DELETE CASCADE,
    CONSTRAINT `fk_recruiters_company` FOREIGN KEY (`company_id`) REFERENCES `companies` (`id`) ON DELETE SET NULL,
    INDEX `idx_recruiters_company` (`company_id`)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;

-- 14.1. Bảng company_join_requests: Yêu cầu xin gia nhập công ty của HR
CREATE TABLE `company_join_requests` (
    `id` BIGINT AUTO_INCREMENT PRIMARY KEY,
    `user_id` BIGINT NOT NULL,
    `company_id` BIGINT NOT NULL,
    `position` VARCHAR(100) NULL,
    `message` TEXT NULL,
    `status` VARCHAR(20) NOT NULL DEFAULT 'PENDING',
    `reason` TEXT NULL,
    `approved_by_user_id` BIGINT NULL,
    `created_at` TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    `updated_at` TIMESTAMP DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP,
    CONSTRAINT `fk_join_req_user` FOREIGN KEY (`user_id`) REFERENCES `users` (`id`) ON DELETE CASCADE,
    CONSTRAINT `fk_join_req_company` FOREIGN KEY (`company_id`) REFERENCES `companies` (`id`) ON DELETE CASCADE,
    INDEX `idx_join_req_user` (`user_id`),
    INDEX `idx_join_req_company_status` (`company_id`, `status`)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;

-- ====================================================================
-- PHÂN HỆ 5: VIỆC LÀM & TÌM KIẾM (JOBS & CATEGORIES)
-- ====================================================================

-- 15. Bảng categories: Danh mục ngành nghề tuyển dụng
CREATE TABLE `categories` (
    `id` INT AUTO_INCREMENT PRIMARY KEY,
    `name` VARCHAR(100) NOT NULL UNIQUE,
    `slug` VARCHAR(120) NOT NULL UNIQUE,
    `description` VARCHAR(255) NULL
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;

-- 16. Bảng jobs: Tin tuyển dụng
CREATE TABLE `jobs` (
    `id` BIGINT AUTO_INCREMENT PRIMARY KEY,
    `company_id` BIGINT NOT NULL,
    `recruiter_id` BIGINT NULL,
    `recruiter_user_id` BIGINT NULL,
    `category_id` INT NULL,
    `title` VARCHAR(255) NOT NULL,
    `description` LONGTEXT NOT NULL,
    `requirements` LONGTEXT NULL,
    `benefits` TEXT NULL,
    `location` VARCHAR(150) NULL,
    `city` VARCHAR(100) NULL,
    `address` VARCHAR(300) NULL,
    `job_type` VARCHAR(50) NULL,
    `experience_level` VARCHAR(50) NULL,
    `salary_min` DECIMAL(15,2) NULL,
    `salary_max` DECIMAL(15,2) NULL,
    `min_salary` DECIMAL(15,2) NULL,
    `max_salary` DECIMAL(15,2) NULL,
    `is_negotiable` BOOLEAN DEFAULT FALSE,
    `status` VARCHAR(20) DEFAULT 'ACTIVE',
    `deadline` DATE NULL,
    `created_at` TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    `updated_at` TIMESTAMP DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP,
    CONSTRAINT `fk_jobs_company` FOREIGN KEY (`company_id`) REFERENCES `companies` (`id`) ON DELETE CASCADE,
    INDEX `idx_jobs_company` (`company_id`),
    INDEX `idx_jobs_status` (`status`),
    INDEX `idx_jobs_deadline` (`deadline`),
    INDEX `idx_jobs_created_at` (`created_at`)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;

-- 17. Bảng job_skills: Liên kết N-N giữa Jobs và Skills yêu cầu
CREATE TABLE `job_skills` (
    `job_id` BIGINT NOT NULL,
    `skill_id` INT NOT NULL,
    PRIMARY KEY (`job_id`, `skill_id`),
    CONSTRAINT `fk_job_skills_job` FOREIGN KEY (`job_id`) REFERENCES `jobs` (`id`) ON DELETE CASCADE,
    CONSTRAINT `fk_job_skills_skill` FOREIGN KEY (`skill_id`) REFERENCES `skills` (`id`) ON DELETE CASCADE
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;

-- 18. Bảng saved_jobs: Ứng viên lưu tin tuyển dụng yêu thích
CREATE TABLE `saved_jobs` (
    `id` BIGINT AUTO_INCREMENT PRIMARY KEY,
    `candidate_id` BIGINT NOT NULL,
    `job_id` BIGINT NOT NULL,
    `created_at` TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT `fk_saved_jobs_candidate` FOREIGN KEY (`candidate_id`) REFERENCES `candidates` (`id`) ON DELETE CASCADE,
    CONSTRAINT `fk_saved_jobs_job` FOREIGN KEY (`job_id`) REFERENCES `jobs` (`id`) ON DELETE CASCADE,
    UNIQUE KEY `uk_saved_job` (`candidate_id`, `job_id`)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;

-- ====================================================================
-- PHÂN HỆ 6: QUẢN LÝ TUYỂN DỤNG ATS & PHỎNG VẤN (ATS PIPELINE)
-- ====================================================================

-- 19. Bảng applications: Đơn ứng tuyển (ATS Core)
CREATE TABLE `applications` (
    `id` BIGINT AUTO_INCREMENT PRIMARY KEY,
    `job_id` BIGINT NOT NULL,
    `candidate_id` BIGINT NOT NULL,
    `resume_id` BIGINT NOT NULL,
    `cover_letter` TEXT NULL,
    `current_stage` VARCHAR(30) DEFAULT 'APPLIED',
    `status` VARCHAR(20) DEFAULT 'SUBMITTED',
    `ai_match_score` DECIMAL(5,2) NULL,
    `created_at` TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    `updated_at` TIMESTAMP DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP,
    CONSTRAINT `fk_applications_job` FOREIGN KEY (`job_id`) REFERENCES `jobs` (`id`) ON DELETE CASCADE,
    CONSTRAINT `fk_applications_candidate` FOREIGN KEY (`candidate_id`) REFERENCES `candidates` (`id`) ON DELETE CASCADE,
    CONSTRAINT `fk_applications_resume` FOREIGN KEY (`resume_id`) REFERENCES `resumes` (`id`) ON DELETE RESTRICT,
    UNIQUE KEY `uk_job_candidate` (`job_id`, `candidate_id`),
    INDEX `idx_applications_stage` (`current_stage`),
    INDEX `idx_applications_job` (`job_id`),
    INDEX `idx_applications_candidate` (`candidate_id`)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;

-- 20. Bảng application_stages: Lịch sử chuyển vòng tuyển dụng của ứng viên
CREATE TABLE `application_stages` (
    `id` BIGINT AUTO_INCREMENT PRIMARY KEY,
    `application_id` BIGINT NOT NULL,
    `stage` VARCHAR(30) NOT NULL,
    `note` TEXT NULL,
    `changed_by_user_id` BIGINT NOT NULL,
    `changed_at` TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT `fk_app_stages_app` FOREIGN KEY (`application_id`) REFERENCES `applications` (`id`) ON DELETE CASCADE,
    CONSTRAINT `fk_app_stages_user` FOREIGN KEY (`changed_by_user_id`) REFERENCES `users` (`id`) ON DELETE CASCADE,
    INDEX `idx_app_stages_app` (`application_id`)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;

-- 21. Bảng application_notes: Ghi chú nội bộ, tag và đánh giá ứng viên của HR
CREATE TABLE `application_notes` (
    `id` BIGINT AUTO_INCREMENT PRIMARY KEY,
    `application_id` BIGINT NOT NULL,
    `recruiter_id` BIGINT NOT NULL,
    `rating` INT NULL,
    `tag` VARCHAR(50) NULL,
    `comment` TEXT NOT NULL,
    `created_at` TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT `fk_app_notes_app` FOREIGN KEY (`application_id`) REFERENCES `applications` (`id`) ON DELETE CASCADE,
    CONSTRAINT `fk_app_notes_recruiter` FOREIGN KEY (`recruiter_id`) REFERENCES `recruiters` (`id`) ON DELETE CASCADE,
    INDEX `idx_app_notes_app` (`application_id`)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;

-- 22. Bảng interviews: Lịch phỏng vấn ứng viên
CREATE TABLE `interviews` (
    `id` BIGINT AUTO_INCREMENT PRIMARY KEY,
    `application_id` BIGINT NOT NULL,
    `interview_time` DATETIME NOT NULL,
    `location_type` VARCHAR(20) NOT NULL DEFAULT 'ONLINE',
    `meeting_link_or_address` VARCHAR(500) NOT NULL,
    `notes` TEXT NULL,
    `status` VARCHAR(20) DEFAULT 'SCHEDULED',
    `created_at` TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT `fk_interviews_app` FOREIGN KEY (`application_id`) REFERENCES `applications` (`id`) ON DELETE CASCADE,
    INDEX `idx_interviews_app` (`application_id`),
    INDEX `idx_interviews_time` (`interview_time`)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;

-- 23. Bảng notifications: Thông báo người dùng
CREATE TABLE `notifications` (
    `id` BIGINT AUTO_INCREMENT PRIMARY KEY,
    `user_id` BIGINT NOT NULL,
    `title` VARCHAR(200) NOT NULL,
    `message` TEXT NOT NULL,
    `type` VARCHAR(50) NOT NULL,
    `is_read` BOOLEAN DEFAULT FALSE,
    `created_at` TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT `fk_notifications_user` FOREIGN KEY (`user_id`) REFERENCES `users` (`id`) ON DELETE CASCADE,
    INDEX `idx_notifications_user` (`user_id`, `is_read`)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;
